--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <title>Página 1</title>
 </head>
 <body>
+<style>
+    body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: left;
+            padding-top: 100px;
+         }
+         
     <h1>Página 1</h1>
     <p>Esta é a primeira página.</p>
     <a href="index2.html">Ir para a Página 2</a>
+    
 </body>
 </html>
