--- a/index.html
+++ b/index.html
@@ -3,15 +3,8 @@
 <head>
     <title>Página 1</title>
 </head>
-<body>
-<style>
-    body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            padding-top: 100px;
-         }
-         
+</body>
+    
     <h1>Página 1</h1>
     <p>Esta é a primeira página.</p>
     <a href="index2.html">Ir para a Página 2</a>
