--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
             background-color: #f0f0f0;
         }
         header {
-            background-color: #333;
+            background-color: #fff;
             color: #fff;
             padding: 10px;
             text-align: center;
